Fix bug with sizing of icons on mobile

--- a/betta-0.0.3.scss
+++ b/betta-0.0.3.scss
@@ -824,6 +824,10 @@ button.dark:active:enabled {
 	body>.icon-button .material-icons-round {
 		font-size: 2.5rem;
 	}
+    
+    .icon-button .material-icons-round.custom-icon img{
+        height: 2.5rem;
+    }
 }
 
 .sliding-button {
